package at.spengergasse.friseursalon.domain;

public enum EmailType {

    PRIVATE,
    BUSINESS,

}
