package at.spengergasse.friseursalon.domain;

public enum Gender {

    MALE,
    FEMALE,
    DIVERS,

}
